--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,4 +13,9 @@ html {
 
 body {
   box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem;
 }
