--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,19 +2,22 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-@import "base/base";
 @import "base/animations";
+@import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button";
+@import "components/card";
 @import "components/composition";
 @import "components/feature-box";
-@import "components/card";
+@import "components/form";
 @import "components/story";
-@import "components/bg-video";
 
-@import "layouts/header";
+@import "layouts/footer";
 @import "layouts/grid";
+@import "layouts/header";
+@import "layouts/navigation";
 
 @import "pages/home";
