--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,15 +7,35 @@
 }
 
 html {
-  // This defines what 1rem will be
-  font-size: 62.5%;
+  // This defines what 1 rem will be
+  font-size: 62.5%; // 1 rem = 10px; 10/16 = 62.5%
+
+  // write from larger to smaller (max-width) for desktop first. Opposite for mobile first (min-width) //
+
+  @include respond(tab-land) {
+    // width < 1200?
+    font-size: 56.25%; //1 rem = 9px, 9/16 = 56.25%
+  }
+
+  @include respond(tab-port) {
+    // width < 900?
+    font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+
+  // @include respond(phone) { // width < 600?
+  //   font-size: 37.5%;
+  // }
+
+  @include respond(big-desktop) {
+    font-size: 75%; //1 rem = 12 px, 12/16 = 75%
+  }
 }
 
 body {
   box-sizing: border-box;
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: #777;
   padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
