--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -4,9 +4,17 @@
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
-    margin-bottom: 5rem;
+    margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 5rem;
+    }
   }
 
   &__logo {
@@ -18,6 +26,10 @@
     border-top: solid 1px $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 
   &__list {
@@ -56,5 +68,10 @@
     padding-top: 2rem;
     width: 85%;
     float: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
