--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -32,8 +32,9 @@
     width: 15rem;
     height: 15rem;
     float: left;
-    // -webkit-shape-outside: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
