Touch ups to media queries without hover

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -38,4 +38,10 @@ body {
   @include respond(tab-port) {
     padding: 0;
   }
+
+  // customize text highlighting. Cool personal style
+  ::selection {
+    background-color: $color-primary;
+    color: $color-white;
+  }
 }
