--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -13,9 +13,9 @@
   clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
 
   // responsive images based on screen resolution and size. Don't use a hight res image if not necessary //
-  @media (min-resolution: 192dpi) and (min-width: 37.5em),
-    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    (min-width: 125em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-secondary-light, 0.8),
